refactor: WIP almost all test passing